RESOLVED FIXED123548
REGRESSION(r158333): http/tests/xmlhttprequest/response-encoding.html and xmlhttprequest-overridemimetype-content-type-header.html are failing
https://bugs.webkit.org/show_bug.cgi?id=123548
Summary REGRESSION(r158333): http/tests/xmlhttprequest/response-encoding.html and xml...
Attachments
proposed fix (6.06 KB, patch)
2013-10-30 23:47 PDT, Alexey Proskuryakov
no flags
patch updated to trunk (6.17 KB, patch)
2013-10-31 00:06 PDT, Alexey Proskuryakov
no flags
Ryosuke Niwa
Comment 1 2013-10-30 19:34:21 PDT
Alexey Proskuryakov
Comment 2 2013-10-30 20:54:05 PDT
Thank you, will look into this tonight. In the future, please just roll out patches that break tests, decreasing test coverage is not beneficial.
Alexey Proskuryakov
Comment 3 2013-10-30 23:44:43 PDT
This is an actual existing bug in WebCore uncovered by the added test. Boy, is WebCore resource cache a mess...
Brady Eidson
Comment 4 2013-10-30 23:46:10 PDT
(In reply to comment #3) > This is an actual existing bug in WebCore uncovered by the added test. > > Boy, is WebCore resource cache a mess... Just discovering that tonight? You're kidding, right?
Alexey Proskuryakov
Comment 5 2013-10-30 23:47:01 PDT
Created attachment 215623 [details] proposed fix
Alexey Proskuryakov
Comment 6 2013-10-31 00:06:54 PDT
Created attachment 215624 [details] patch updated to trunk
Ryosuke Niwa
Comment 7 2013-10-31 00:26:00 PDT
(In reply to comment #3) > This is an actual existing bug in WebCore uncovered by the added test. > > Boy, is WebCore resource cache a mess... Indeed :(
Brady Eidson
Comment 8 2013-10-31 09:18:58 PDT
Comment on attachment 215624 [details] patch updated to trunk !!!
WebKit Commit Bot
Comment 9 2013-10-31 09:48:15 PDT
Comment on attachment 215624 [details] patch updated to trunk Clearing flags on attachment: 215624 Committed r158362: <http://trac.webkit.org/changeset/158362>
WebKit Commit Bot
Comment 10 2013-10-31 09:48:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.